feat: base setup for crud operations for category, articles and tables
