# smartbar-backoffice/src/main/resources/openapi/backoffice-openapi.yaml
@@ -17,7 +17,7 @@ paths:
                 type:
                   - array
                 items:
-                  $ref: "#/components/schemas/category"
+                  $ref: "#/components/schemas/apiCategory"
     post:
       tags:
         - Categories
@@ -25,7 +25,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/category"
+              $ref: "#/components/schemas/apiCategory"
       responses:
         201:
           description: Success
@@ -34,7 +34,7 @@ paths:
     parameters:
       - name: categoryId
         schema:
-          type: string
+          $ref: "#/components/schemas/id"
         in: path
     put:
       tags:
@@ -43,7 +43,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/category"
+              $ref: "#/components/schemas/apiCategory"
       responses:
         200:
           description: Entity successfully updated
@@ -62,7 +62,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/category"
+                $ref: "#/components/schemas/apiCategory"
   /articles:
     get:
       tags:
@@ -75,15 +75,22 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/article"
+                  $ref: "#/components/schemas/apiArticle"
     post:
       tags:
         - Articles
+      parameters:
+        - name: x-category-id
+          in: header
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/article"
+              $ref: "#/components/schemas/apiArticle"
       responses:
         201:
           $ref: "#/components/responses/201"
@@ -91,7 +98,7 @@ paths:
     parameters:
       - name: articleId
         schema:
-          type: string
+          $ref: "#/components/schemas/id"
         in: path
     put:
       tags:
@@ -100,7 +107,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/article"
+              $ref: "#/components/schemas/apiArticle"
       responses:
         200:
           description: Entity successfully updated
@@ -119,7 +126,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/article"
+                $ref: "#/components/schemas/apiArticle"
   /tables:
     get:
       tags:
@@ -148,7 +155,7 @@ paths:
     parameters:
       - name: tableId
         schema:
-          type: string
+          $ref: "#/components/schemas/id"
         in: path
     put:
       tags:
@@ -179,16 +186,22 @@ paths:
                 $ref: "#/components/schemas/apiTable"
 components:
   schemas:
-    category:
+    apiCategory:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         description:
           type: string
-    article:
+    apiArticle:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         price:
@@ -200,12 +213,18 @@ components:
     apiTable:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string,
         seatCount:
           type: integer,
         active:
           type: boolean
+    id:
+      type: integer
+      format: int64
   responses:
     201:
       description: Entity successfully created
